2001-10-13  Daniel Resare  <noa@metamatrix.se>

	* jikes.spec: Properly set the file ownership to root

2001-10-13  Chris Abbey  <jikes@cabbey.net>

	* jikes.spec: set version to make it obvious if someone is using
	CVS versions.
	
2001-10-12  Eric Blake  <ebb9@email.byu.edu>

	* jikes.spec: Update to version 1.15.
	* configure.in: Change version to 1.15a to make it obvious when
	bug reports are made against CVS.
	* configure:
	* src/config.h.in: Regenerate.

2001-09-28  Chris Abbey  <jikes@cabbey.net>

	Released 1.15, thanks for driving this one Eric.

2001-09-28  Chris Abbey  <jikes@cabbey.net>

	* src/option.cpp: Correct regression with cygwin classpath
	handling, consolidate options and envvars to common code.

2001-09-21  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Update the version to 1.15 in preparation for
	release candidate.
	* configure: Regenerate.

2001-09-21  Mo DeJong  <supermo@bayarea.net>

	* HACKING: Add note about running ./autogen.sh to regenerate
	autotools files - patch 193.
	* autogen.sh: Run automake before autoconf.
	* src/Makefile.am: Update the dependencies to be current.
	* Makefile.in:
	* doc/Makefile.in:
	* src/Makefile.in: Regen, without auto dependency tracking for now.

2001-09-20  Mo DeJong  <supermo@bayarea.net>

	* configure.in: Change --enable-debug option so that CXXFLAGS is
	automatically set to -g when the CXXFLAGS variable was not set by
	the user - patch 192.
	* configure: Regen.

2001-09-20  Chris Abbey  <jikes@cabbey.net> 

	* src/double.h (BigInt): Fixed friend class issues, to correct
	build breakage with compilers stricter than gcc is (like AIX) -
	patch 186.

2001-09-20  Mo DeJong  <supermo@bayarea.net> 

	* configure.in: Add check for __int64 type which is supported by
	VC++ under Windows - patch 191.
	* configure: Regen.
	* src/config.h.in: Regen.
	* src/platform.h: Revert incorrect #ifdef checks added by patch
	190. These checks need to be done in the configure.in file so
	config.h gets the right #ifdefs.